<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/CreditCardInputLayoutBoxes"
                android:id="@+id/til_credit_card_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/credit_card_number">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditTexts"
                    android:id="@+id/et_credit_card_number"
                    android:maxLength="@integer/maximum_credit_card_number_length"
                    android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/CreditCardInputLayoutBoxes"
                android:id="@+id/til_expiration_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/til_cvv"
                app:layout_constraintTop_toBottomOf="@+id/til_credit_card_number"
                android:layout_marginEnd="@dimen/inner_vertical_input_margin"
                android:layout_marginRight="@dimen/inner_vertical_input_margin"
                android:hint="@string/expiration_date">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditTexts"
                    android:id="@+id/et_expiration_date"
                    android:maxLength="@integer/expiration_date_length_including_slash"
                    android:digits="01234567890/"
                    android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/CreditCardInputLayoutBoxes"
                android:id="@+id/til_cvv"
                app:layout_constraintStart_toEndOf="@id/til_expiration_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_credit_card_number"
                android:layout_marginStart="@dimen/inner_vertical_input_margin"
                android:layout_marginLeft="@dimen/inner_vertical_input_margin"
                android:hint="@string/cvv">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditTexts"
                    android:id="@+id/et_cvv"
                    android:maxLength="@integer/maximum_cvv_length"
                    android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/CreditCardInputLayoutBoxes"
                android:id="@+id/til_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/til_last_name"
                app:layout_constraintTop_toBottomOf="@id/til_expiration_date"
                android:layout_marginEnd="@dimen/inner_vertical_input_margin"
                android:layout_marginRight="@dimen/inner_vertical_input_margin"
                android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/FirstOrLastNameInput"
                    android:id="@+id/et_first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/CreditCardInputLayoutBoxes"
                android:id="@+id/til_last_name"
                app:layout_constraintStart_toEndOf="@id/til_first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_expiration_date"
                android:layout_marginStart="@dimen/inner_vertical_input_margin"
                android:layout_marginLeft="@dimen/inner_vertical_input_margin"
                android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/FirstOrLastNameInput"
                    android:id="@+id/et_last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit_payment"
                android:text="@string/pay"
                android:paddingTop="@dimen/button_vertical_padding"
                android:paddingBottom="@dimen/button_vertical_padding"
                app:layout_constraintTop_toBottomOf="@+id/til_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>